<?xml version="1.0"?>  <!-- Declares the XML version being used (1.0) -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>  <!-- Specifies the XML schema for validation of the ROS package format -->
<package format="3">  <!-- Declares the start of the package element, specifying the package format version as 3 -->
  <name>vff_avoidance</name>  <!-- Defines the name of the package as "vff_avoidance" -->
  <version>0.0.0</version>  <!-- Defines the version of the package (here it's set to 0.0.0) -->
  <description>TODO: Package description</description>  <!-- Placeholder for the description of the package -->
  <maintainer email="Tonijtannous@outlook.com">toni</maintainer>  <!-- Defines the maintainer's name and email address -->
  <license>TODO: License declaration</license>  <!-- Placeholder for the license declaration of the package -->

  <buildtool_depend>ament_cmake</buildtool_depend>  <!-- Specifies the build tool dependency as "ament_cmake", which is used for building ROS 2 packages -->

  <depend>rclcpp</depend>  <!-- Declares a runtime dependency on the ROS 2 C++ client library (rclcpp) -->
  <depend>sensor_msgs</depend>  <!-- Declares a runtime dependency on the sensor_msgs package, which provides sensor message types -->
  <depend>geometry_msgs</depend>  <!-- Declares a runtime dependency on the geometry_msgs package, which provides geometric message types -->
  <depend>visualization_msgs</depend>  <!-- Declares a runtime dependency on the visualization_msgs package, which provides visualization-related message types -->

  <test_depend>ament_lint_auto</test_depend>  <!-- Declares a test-time dependency on a package that auto-generates linter configurations for the ROS 2 build system -->
  <test_depend>ament_lint_common</test_depend>  <!-- Declares a test-time dependency on common linter utilities for ROS 2 -->

  <export>
    <build_type>ament_cmake</build_type>  <!-- Specifies the build type for the package, which in this case is "ament_cmake" -->
  </export>
</package>  <!-- Ends the package element -->
